--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <p class='underlined'>Let's write your brand's history...</p>
         <p>Since our website is under construction, please leave your email if you would like to receive a copy of our portfolio
           or contact adriana@caracter.mx</p>
+        <input class='text-center' type='text' placeholder='EMAIL ME'>
       </div>
     </div>
     <div class='row align-items-end justify-content-center'>
