changed logo and added id

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div id='main-container' class='container'>
     <div class='row align-items-start justify-content-center'>
       <div id='top-row' class='col-6'>
-        <img src='./assets/images/CaracterLogo-01.png' alt='Caracter Logo'>
+        <img id='caracter-logo' src='./assets/images/CaracterLogo-solo.png' alt='Caracter Logo'>
       </div>
       <div class='col-6'></div>
     </div>
@@ -39,5 +39,5 @@
   crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
   crossorigin="anonymous"></script>
-
+<script src='./assets/scripts/scripts.js'></script>
 </html>
