--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset='UTF-8'>
-  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />  
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
   <meta http-equiv='X-UA-Compatible' content='ie=edge'>
   <title>Caracter | Brand Experience Design</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
@@ -24,7 +24,9 @@
         <p class='underlined'>Let's write your brand's history...</p>
         <p>Since our website is under construction, please leave your email if you would like to receive a copy of our portfolio
           or contact adriana@caracter.mx</p>
-        <input class='text-center' type='text' placeholder='EMAIL ME'>
+        <form action="https://formspree.io/segoarce90@gmail.com" method="POST">
+          <input class='text-center' type='text' placeholder='EMAIL ME'>
+        </form>
       </div>
     </div>
     <div class='row align-items-end justify-content-center'>
@@ -40,4 +42,5 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
   crossorigin="anonymous"></script>
 <script src='./assets/scripts/scripts.js'></script>
+
 </html>
