replyto name on input

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>Since our website is under construction, please leave your email if you would like to receive a copy of our portfolio
           or contact adriana@caracter.mx</p>
         <form action="https://formspree.io/segoarce90@gmail.com" method="POST">
-          <input class='text-center' type='text' placeholder='EMAIL ME'>
+          <input class='text-center' type='text' name='_replyto' placeholder='EMAIL ME'>
         </form>
       </div>
     </div>
