--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </form>
       </div>
     </div>
-    <div class='row align-items-end justify-content-center'>
+    <div id='bottom-row' class='row align-items-end justify-content-center'>
       <h4 class='text-center'>BRAND EXPERIENCE DESIGN</h4>
     </div>
   </div>
