--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </div>
     <div class='row align-items-center justify-content-center'>
       <div class='text-center'>
-        <p class='underlined'>Let's write your brand's history...</p>
-        <p>Since our website is under construction, please leave your email if you would like to receive a copy of our portfolio
+        <p class='underlined'>Let's write your brand's story...</p>
+        <p>Our website is under construction, please leave your email if you would like to receive a copy of our portfolio
           or contact adriana@caracter.mx</p>
         <form action='https://formspree.io/adriana@caracter.mx' method='POST'>
           <input class='text-center' type='text' name='_replyto' placeholder='EMAIL ME'>
